--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DrawRiff"></activity>
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     </application>
 
