--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DrawRiff"></activity>
+        <activity android:name=".ListenToNumbers"></activity>
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     </application>
 
